# cortex

./: README.md  main.py  pyproject.toml  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
